--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.subject {
+  list-style: none;
+  border: 1px solid darkgray;
+  width: 200px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 1.5rem;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: rgba(225, 0, 0, 0.9);
   color: white;
+  font-size: 18px;
+  font-family: monospace;
 }
 
-.App-link {
-  color: #61dafb;
+.subject:hover {
+  background-color: rgba(225, 0, 0, 1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.topics-wrapper {
+  display: flex;
+  column-gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.subject-title {
+  border-bottom: 1px solid black;
 }
